[gd_scene load_steps=15 format=3 uid="uid://cmbnm81hqjj7w"]

[ext_resource type="Script" path="res://chart_editor.gd" id="1_0e0hw"]
[ext_resource type="Texture2D" uid="uid://bt5o0b8qyb3wd" path="res://note detail stuffs/tap.png" id="2_3jjh2"]
[ext_resource type="Theme" uid="uid://cagtxxicx3p16" path="res://new_theme.tres" id="2_3k4yr"]
[ext_resource type="PackedScene" uid="uid://bodw6vmqh82bf" path="res://note detail stuffs/chart_preview_area.tscn" id="3_7ko7q"]
[ext_resource type="PackedScene" uid="uid://cnfa6jwk4yk48" path="res://note detail stuffs/slider_detail.tscn" id="3_johcs"]
[ext_resource type="Texture2D" uid="uid://bag2msk38mxhr" path="res://note detail stuffs/frame_white.png" id="3_l1iwb"]
[ext_resource type="Texture2D" uid="uid://d0c2d5yiag0qj" path="res://note detail stuffs/frame_yellow.png" id="4_l8ibe"]
[ext_resource type="Texture2D" uid="uid://dtp6uksbnuglt" path="res://note detail stuffs/hold.png" id="5_0yoip"]
[ext_resource type="Texture2D" uid="uid://bv7e1bkhhnyua" path="res://note detail stuffs/slider.png" id="6_tnwyh"]
[ext_resource type="PackedScene" uid="uid://bpr58vstropk0" path="res://note detail stuffs/effect_map.tscn" id="10_2cdv0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dhqh1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_l1iwb")
}],
"loop": true,
"name": &"white",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_l8ibe")
}],
"loop": true,
"name": &"yellow",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_b2u1s"]
Button/colors/font_pressed_color = Color(1, 1, 0, 1)

[sub_resource type="Theme" id="Theme_qd3ir"]
Button/colors/font_pressed_color = Color(1, 1, 0, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_o2ctu"]

[node name="ChartEditor" type="Node2D"]
script = ExtResource("1_0e0hw")

[node name="AudioPlayers" type="Node2D" parent="."]

[node name="TrackPlayer" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="ChartPreview" type="Node2D" parent="."]

[node name="Circle" type="Line2D" parent="ChartPreview"]
closed = true
width = 2.0

[node name="Circle2" type="Line2D" parent="ChartPreview"]
closed = true
width = 2.0

[node name="Jacket" type="Polygon2D" parent="ChartPreview"]

[node name="SelectedHighlight" type="Node2D" parent="ChartPreview"]

[node name="Line2D" type="Line2D" parent="ChartPreview/SelectedHighlight"]
closed = true
width = 3.0

[node name="ChartPreviewArea" parent="ChartPreview" instance=ExtResource("3_7ko7q")]
position = Vector2(425, 250)

[node name="FPS" type="Label" parent="ChartPreview"]
offset_left = 1073.0
offset_right = 1149.0
offset_bottom = 36.0
text = "FPS: 60"
horizontal_alignment = 2

[node name="Timeline" type="Node2D" parent="."]

[node name="NoteTimeline" type="ColorRect" parent="Timeline"]
offset_left = 116.0
offset_top = 516.0
offset_right = 1080.0
offset_bottom = 648.0
color = Color(0, 0.137255, 0.25098, 1)

[node name="SongTimer" type="Timer" parent="Timeline"]
one_shot = true

[node name="StartCountdown" type="Timer" parent="Timeline"]
one_shot = true

[node name="PlacementTools" type="Node2D" parent="."]

[node name="Tap" type="Node2D" parent="PlacementTools"]

[node name="Highlight" type="AnimatedSprite2D" parent="PlacementTools/Tap"]
visible = false
position = Vector2(693, 62)
sprite_frames = SubResource("SpriteFrames_dhqh1")
animation = &"white"

[node name="TapToggle" type="Button" parent="PlacementTools/Tap"]
offset_left = 652.0
offset_top = 23.0
offset_right = 732.0
offset_bottom = 103.0
icon = ExtResource("2_3jjh2")
flat = true

[node name="Hold" type="Node2D" parent="PlacementTools"]

[node name="Highlight" type="AnimatedSprite2D" parent="PlacementTools/Hold"]
visible = false
position = Vector2(693, 170)
sprite_frames = SubResource("SpriteFrames_dhqh1")
animation = &"white"

[node name="HoldToggle" type="Button" parent="PlacementTools/Hold"]
offset_left = 651.0
offset_top = 130.0
offset_right = 731.0
offset_bottom = 210.0
icon = ExtResource("5_0yoip")
flat = true

[node name="Slider" type="Node2D" parent="PlacementTools"]

[node name="Highlight" type="AnimatedSprite2D" parent="PlacementTools/Slider"]
visible = false
position = Vector2(694, 281)
sprite_frames = SubResource("SpriteFrames_dhqh1")
animation = &"white"

[node name="SliderToggle" type="Button" parent="PlacementTools/Slider"]
offset_left = 653.0
offset_top = 241.0
offset_right = 733.0
offset_bottom = 321.0
icon = ExtResource("6_tnwyh")
flat = true

[node name="BreakToggle" type="Button" parent="PlacementTools"]
offset_left = 649.0
offset_top = 336.0
offset_right = 735.0
offset_bottom = 372.0
theme = SubResource("Theme_b2u1s")
toggle_mode = true
text = "Break"

[node name="EXToggle" type="Button" parent="PlacementTools"]
offset_left = 649.0
offset_top = 377.0
offset_right = 735.0
offset_bottom = 413.0
theme = SubResource("Theme_qd3ir")
toggle_mode = true
text = "EX"

[node name="TouchToggle" type="Button" parent="PlacementTools"]
offset_left = 649.0
offset_top = 420.0
offset_right = 735.0
offset_bottom = 456.0
theme = SubResource("Theme_qd3ir")
toggle_mode = true
text = "Touch"

[node name="FireworkToggle" type="Button" parent="PlacementTools"]
offset_left = 649.0
offset_top = 462.0
offset_right = 735.0
offset_bottom = 498.0
theme = SubResource("Theme_qd3ir")
toggle_mode = true
text = "Firework"

[node name="NoteDetails" type="Node2D" parent="."]

[node name="ScrollContainer" type="ScrollContainer" parent="NoteDetails"]
offset_left = 756.0
offset_top = 35.0
offset_right = 1107.0
offset_bottom = 479.0
theme = ExtResource("2_3k4yr")
scroll_vertical = 10
horizontal_scroll_mode = 0

[node name="Properties" type="VBoxContainer" parent="NoteDetails/ScrollContainer"]
layout_mode = 2

[node name="NoteProperties" type="VBoxContainer" parent="NoteDetails/ScrollContainer/Properties"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NoteDetails/ScrollContainer/Properties/NoteProperties"]
layout_mode = 2

[node name="Text" type="Label" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.364706, 0.564706, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Note Properties"

[node name="DeleteNote" type="Button" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/HBoxContainer"]
layout_mode = 2
text = "del note"

[node name="NodePos" type="HBoxContainer" parent="NoteDetails/ScrollContainer/Properties/NoteProperties"]
layout_mode = 2

[node name="Pos" type="Label" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/NodePos"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Note Pos:"

[node name="NotePos1" type="LineEdit" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/NodePos"]
layout_mode = 2
max_length = 2

[node name="NotePos2" type="LineEdit" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/NodePos"]
layout_mode = 2
placeholder_text = "1-8"
max_length = 2

[node name="NoteParams1" type="HBoxContainer" parent="NoteDetails/ScrollContainer/Properties/NoteProperties"]
layout_mode = 2

[node name="Break" type="CheckBox" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams1"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Break"

[node name="EX" type="CheckBox" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams1"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "EX"

[node name="Star" type="CheckBox" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams1"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Star"

[node name="Rotate" type="CheckBox" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams1"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Spinning"

[node name="Tapless" type="CheckBox" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams1"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Tapless"

[node name="NoteParams2" type="HBoxContainer" parent="NoteDetails/ScrollContainer/Properties/NoteProperties"]
layout_mode = 2

[node name="Firework" type="CheckBox" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams2"]
layout_mode = 2
text = "Firework"

[node name="Mine" type="CheckBox" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams2"]
layout_mode = 2
text = "Mine"

[node name="Backtick" type="SpinBox" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams2"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
max_value = 127.0
value = 100.0
suffix = "ticks"

[node name="HoldSlideChange" type="HBoxContainer" parent="NoteDetails/ScrollContainer/Properties/NoteProperties"]
layout_mode = 2

[node name="Hold" type="Button" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/HoldSlideChange"]
layout_mode = 2
text = "Hold Toggle"

[node name="AddSlide" type="Button" parent="NoteDetails/ScrollContainer/Properties/NoteProperties/HoldSlideChange"]
layout_mode = 2
text = "Add Slide"

[node name="HoldProperties" type="VBoxContainer" parent="NoteDetails/ScrollContainer/Properties"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NoteDetails/ScrollContainer/Properties/HoldProperties"]
layout_mode = 2

[node name="Text" type="Label" parent="NoteDetails/ScrollContainer/Properties/HoldProperties/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.364706, 0.564706, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Hold Properties"

[node name="HoldDuration" type="HBoxContainer" parent="NoteDetails/ScrollContainer/Properties/HoldProperties"]
layout_mode = 2

[node name="Duration" type="Label" parent="NoteDetails/ScrollContainer/Properties/HoldProperties/HoldDuration"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Duration:"

[node name="HoldDurationX" type="LineEdit" parent="NoteDetails/ScrollContainer/Properties/HoldProperties/HoldDuration"]
layout_mode = 2
placeholder_text = "1"

[node name="Slash" type="Label" parent="NoteDetails/ScrollContainer/Properties/HoldProperties/HoldDuration"]
layout_mode = 2
text = "/"

[node name="HoldDurationY" type="LineEdit" parent="NoteDetails/ScrollContainer/Properties/HoldProperties/HoldDuration"]
layout_mode = 2
placeholder_text = "4"

[node name="Slash2" type="Label" parent="NoteDetails/ScrollContainer/Properties/HoldProperties/HoldDuration"]
layout_mode = 2
text = "Bar"

[node name="SliderProperties" type="VBoxContainer" parent="NoteDetails/ScrollContainer/Properties"]
layout_mode = 2

[node name="TextContainer" type="HBoxContainer" parent="NoteDetails/ScrollContainer/Properties/SliderProperties"]
layout_mode = 2

[node name="Text" type="Label" parent="NoteDetails/ScrollContainer/Properties/SliderProperties/TextContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.364706, 0.564706, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Slide Properties"

[node name="VBoxContainer" type="VBoxContainer" parent="NoteDetails/ScrollContainer/Properties/SliderProperties"]
layout_mode = 2

[node name="Slider1" parent="NoteDetails/ScrollContainer/Properties/SliderProperties/VBoxContainer" instance=ExtResource("3_johcs")]
layout_mode = 2

[node name="FileOptions" type="Node2D" parent="."]

[node name="MenuButton" type="MenuButton" parent="FileOptions"]
offset_left = 3.0
offset_top = 3.0
offset_right = 113.0
offset_bottom = 54.0
button_group = SubResource("ButtonGroup_o2ctu")
text = "Options"
item_count = 3
popup/item_0/text = "Save"
popup/item_0/id = 0
popup/item_1/text = "Export to maidata"
popup/item_1/id = 1
popup/item_2/text = "Return to menu"
popup/item_2/id = 2

[node name="MaidataExport" type="FileDialog" parent="FileOptions"]
title = "Open a Directory"
size = Vector2i(1050, 550)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
show_hidden_files = true
use_native_dialog = true

[node name="NoticeWindow" type="AcceptDialog" parent="FileOptions"]
title = "Notice"
initial_position = 1

[node name="Context" type="Label" parent="FileOptions/NoticeWindow"]
offset_left = 8.0
offset_top = 8.0
offset_right = 92.0
offset_bottom = 51.0
text = "segs"
horizontal_alignment = 1

[node name="MetadataOptions" type="Node2D" parent="."]

[node name="Label" type="Label" parent="MetadataOptions"]
offset_left = 19.0
offset_top = 88.0
offset_right = 94.0
offset_bottom = 111.0
text = "Difficulty:"

[node name="DifficultySelect" type="OptionButton" parent="MetadataOptions"]
offset_left = 17.0
offset_top = 117.0
offset_right = 141.0
offset_bottom = 152.0
item_count = 7
selected = 0
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Basic"
popup/item_1/id = 1
popup/item_2/text = "Advanced"
popup/item_2/id = 2
popup/item_3/text = "Expert"
popup/item_3/id = 3
popup/item_4/text = "Master"
popup/item_4/id = 4
popup/item_5/text = "Re:Master"
popup/item_5/id = 5
popup/item_6/text = "Original"
popup/item_6/id = 6

[node name="Label2" type="Label" parent="MetadataOptions"]
offset_left = 19.0
offset_top = 163.0
offset_right = 64.0
offset_bottom = 186.0
text = "Level:"

[node name="ChartConstant" type="LineEdit" parent="MetadataOptions"]
offset_left = 19.0
offset_top = 194.0
offset_right = 86.0625
offset_bottom = 225.0
text = "15"

[node name="Label3" type="Label" parent="MetadataOptions"]
offset_left = 20.0
offset_top = 234.0
offset_right = 114.0
offset_bottom = 257.0
text = "Music Offset:"

[node name="MusicOffset" type="LineEdit" parent="MetadataOptions"]
offset_left = 19.0
offset_top = 266.0
offset_right = 86.0625
offset_bottom = 297.0
text = "0.00"

[node name="OtherMetadata" type="Button" parent="MetadataOptions"]
offset_left = 18.0
offset_top = 307.0
offset_right = 115.0
offset_bottom = 343.0
text = "Other infos"

[node name="UpdateBG" type="Button" parent="MetadataOptions"]
offset_left = 17.0
offset_top = 356.0
offset_right = 114.0
offset_bottom = 392.0
text = "Change bg"

[node name="PickBG" type="FileDialog" parent="MetadataOptions"]
title = "Open a File"
initial_position = 1
size = Vector2i(1050, 550)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.jpg", "*.png", "*.jpeg")
show_hidden_files = true
use_native_dialog = true

[node name="Window" type="Window" parent="MetadataOptions"]
initial_position = 2
size = Vector2i(400, 200)
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="MetadataOptions/Window"]
offset_right = 390.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MetadataOptions/Window/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MetadataOptions/Window/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Artist" type="Label" parent="MetadataOptions/Window/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Artist:"

[node name="ArtistField" type="LineEdit" parent="MetadataOptions/Window/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MetadataOptions/Window/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Designer" type="Label" parent="MetadataOptions/Window/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Chart Designer:"

[node name="DesignerField" type="LineEdit" parent="MetadataOptions/Window/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MetadataOptions/Window/VBoxContainer"]
layout_mode = 2

[node name="BoxContainer2" type="BoxContainer" parent="MetadataOptions/Window/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="MetadataOptions/Window/VBoxContainer/HBoxContainer/BoxContainer2"]
layout_mode = 2
text = "Others:"

[node name="BoxContainer" type="BoxContainer" parent="MetadataOptions/Window/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(330, 120)
layout_mode = 2

[node name="OtherMetadata" type="TextEdit" parent="MetadataOptions/Window/VBoxContainer/HBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlaybackControls" type="Node2D" parent="."]

[node name="ElapsedTime" type="Label" parent="PlaybackControls"]
offset_left = 145.0
offset_top = 459.0
offset_right = 248.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 24
text = "10:00.00
"

[node name="TimeSlider" type="Node2D" parent="PlaybackControls"]

[node name="ProgressBar" type="ProgressBar" parent="PlaybackControls/TimeSlider"]
offset_left = 265.0
offset_top = 464.0
offset_right = 623.0
offset_bottom = 491.0
show_percentage = false

[node name="PlayPause" type="Button" parent="PlaybackControls"]
offset_left = 11.0
offset_top = 449.0
offset_right = 67.0
offset_bottom = 505.0
text = "▶"

[node name="Stop" type="Button" parent="PlaybackControls"]
offset_left = 77.0
offset_top = 449.0
offset_right = 133.0
offset_bottom = 505.0
text = "■"

[node name="BPMChanges" type="Node2D" parent="."]

[node name="BeatDivisorChanges" type="Node2D" parent="."]

[node name="Waveform" type="Node2D" parent="."]

[node name="TimelineBeats" type="Node2D" parent="."]

[node name="TimelineBars" type="Node2D" parent="."]

[node name="TimelinePointer" type="Node2D" parent="."]

[node name="Pointer" type="Node2D" parent="TimelinePointer"]

[node name="Line2D" type="Line2D" parent="TimelinePointer/Pointer"]
points = PackedVector2Array(240, 516, 240, 648)
width = 2.0

[node name="Polygon2D" type="Polygon2D" parent="TimelinePointer/Pointer"]
polygon = PackedVector2Array(230, 513, 250, 513, 240, 530)

[node name="EffectMap" parent="." instance=ExtResource("10_2cdv0")]
position = Vector2(425, 250)

[node name="Notes" type="Node2D" parent="."]

[node name="TimeLineControls" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="TimeLineControls"]
offset_left = 1080.0
offset_top = 516.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.513726, 0.513726, 0.513726, 1)

[node name="ColorRect3" type="ColorRect" parent="TimeLineControls"]
offset_top = 516.0
offset_right = 116.0
offset_bottom = 648.0
color = Color(0.513726, 0.513726, 0.513726, 1)

[node name="ZoomUp" type="Button" parent="TimeLineControls"]
offset_left = 1096.0
offset_top = 532.0
offset_right = 1135.0
offset_bottom = 572.0
text = "+"

[node name="ZoomDown" type="Button" parent="TimeLineControls"]
offset_left = 1096.0
offset_top = 590.0
offset_right = 1135.0
offset_bottom = 630.0
text = "-"

[node name="AddBPMNode" type="Button" parent="TimeLineControls"]
offset_left = 11.0
offset_top = 525.0
offset_right = 105.0
offset_bottom = 575.0
text = "(BPM)"

[node name="AddDivisorNode" type="Button" parent="TimeLineControls"]
offset_left = 10.0
offset_top = 587.0
offset_right = 104.0
offset_bottom = 637.0
text = "{Divisor}"

[node name="BPMWindow" type="Node2D" parent="TimeLineControls"]
visible = false

[node name="ColorRect" type="ColorRect" parent="TimeLineControls/BPMWindow"]
offset_left = 189.0
offset_top = 389.0
offset_right = 297.0
offset_bottom = 496.0
color = Color(0.678431, 0.678431, 0.678431, 1)

[node name="Label" type="Label" parent="TimeLineControls/BPMWindow"]
offset_left = 199.0
offset_top = 397.0
offset_right = 319.0
offset_bottom = 462.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "BPM:"

[node name="BPMField" type="LineEdit" parent="TimeLineControls/BPMWindow"]
offset_left = 199.0
offset_top = 421.0
offset_right = 286.0
offset_bottom = 454.0

[node name="DeleteBPMChange" type="Button" parent="TimeLineControls/BPMWindow"]
offset_left = 192.0
offset_top = 461.0
offset_right = 292.0
offset_bottom = 492.0
text = "delete node"

[node name="BeatDivisorWindow" type="Node2D" parent="TimeLineControls"]
visible = false

[node name="ColorRect" type="ColorRect" parent="TimeLineControls/BeatDivisorWindow"]
offset_left = 189.0
offset_top = 389.0
offset_right = 297.0
offset_bottom = 496.0
color = Color(0.678431, 0.678431, 0.678431, 1)

[node name="Label" type="Label" parent="TimeLineControls/BeatDivisorWindow"]
offset_left = 194.0
offset_top = 396.0
offset_right = 314.0
offset_bottom = 461.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Beat Divisor:"

[node name="BeatDivisorField" type="LineEdit" parent="TimeLineControls/BeatDivisorWindow"]
offset_left = 199.0
offset_top = 420.0
offset_right = 286.0
offset_bottom = 453.0

[node name="DeleteBDChange" type="Button" parent="TimeLineControls/BeatDivisorWindow"]
offset_left = 192.0
offset_top = 461.0
offset_right = 292.0
offset_bottom = 492.0
text = "delete node"

[node name="Button" type="Button" parent="."]
offset_left = 119.0
offset_right = 271.0
offset_bottom = 67.0
text = "btn"

[connection signal="gui_input" from="Timeline/NoteTimeline" to="." method="_on_note_timeline_gui_input"]
[connection signal="timeout" from="Timeline/SongTimer" to="." method="_on_song_timer_timeout"]
[connection signal="timeout" from="Timeline/StartCountdown" to="." method="_on_start_countdown_timeout"]
[connection signal="pressed" from="PlacementTools/Tap/TapToggle" to="." method="_on_tap_toggle_pressed"]
[connection signal="pressed" from="PlacementTools/Hold/HoldToggle" to="." method="_on_hold_toggle_pressed"]
[connection signal="pressed" from="PlacementTools/Slider/SliderToggle" to="." method="_on_slider_toggle_pressed"]
[connection signal="toggled" from="PlacementTools/BreakToggle" to="." method="_on_break_toggle_toggled"]
[connection signal="toggled" from="PlacementTools/EXToggle" to="." method="_on_ex_toggle_toggled"]
[connection signal="toggled" from="PlacementTools/TouchToggle" to="." method="_on_touch_toggle_toggled"]
[connection signal="toggled" from="PlacementTools/FireworkToggle" to="." method="_on_firework_toggle_toggled"]
[connection signal="pressed" from="NoteDetails/ScrollContainer/Properties/NoteProperties/HBoxContainer/DeleteNote" to="." method="_on_delete_note_pressed"]
[connection signal="text_changed" from="NoteDetails/ScrollContainer/Properties/NoteProperties/NodePos/NotePos1" to="." method="_on_note_pos_1_text_changed"]
[connection signal="text_changed" from="NoteDetails/ScrollContainer/Properties/NoteProperties/NodePos/NotePos2" to="." method="_on_note_pos_2_text_changed"]
[connection signal="toggled" from="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams1/Break" to="." method="_on_break_toggled"]
[connection signal="toggled" from="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams1/EX" to="." method="_on_ex_toggled"]
[connection signal="toggled" from="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams1/Star" to="." method="_on_star_toggled"]
[connection signal="toggled" from="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams1/Rotate" to="." method="_on_rotate_toggled"]
[connection signal="toggled" from="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams1/Tapless" to="." method="_on_tapless_toggled"]
[connection signal="toggled" from="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams2/Firework" to="." method="_on_firework_toggled"]
[connection signal="toggled" from="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams2/Mine" to="." method="_on_mine_toggled"]
[connection signal="value_changed" from="NoteDetails/ScrollContainer/Properties/NoteProperties/NoteParams2/Backtick" to="." method="_on_backtick_value_changed"]
[connection signal="pressed" from="NoteDetails/ScrollContainer/Properties/NoteProperties/HoldSlideChange/Hold" to="." method="_on_hold_pressed"]
[connection signal="pressed" from="NoteDetails/ScrollContainer/Properties/NoteProperties/HoldSlideChange/AddSlide" to="." method="_on_add_slide_pressed"]
[connection signal="text_changed" from="NoteDetails/ScrollContainer/Properties/HoldProperties/HoldDuration/HoldDurationX" to="." method="_on_hold_duration_x_text_changed"]
[connection signal="text_changed" from="NoteDetails/ScrollContainer/Properties/HoldProperties/HoldDuration/HoldDurationY" to="." method="_on_hold_duration_y_text_changed"]
[connection signal="close_requested" from="FileOptions/MaidataExport" to="." method="_on_maidata_export_close_requested"]
[connection signal="dir_selected" from="FileOptions/MaidataExport" to="." method="_on_maidata_export_dir_selected"]
[connection signal="canceled" from="FileOptions/NoticeWindow" to="." method="_on_notice_window_canceled"]
[connection signal="confirmed" from="FileOptions/NoticeWindow" to="." method="_on_notice_window_confirmed"]
[connection signal="item_selected" from="MetadataOptions/DifficultySelect" to="." method="_on_difficulty_select_item_selected"]
[connection signal="focus_exited" from="MetadataOptions/ChartConstant" to="." method="_on_chart_constant_focus_exited"]
[connection signal="text_submitted" from="MetadataOptions/ChartConstant" to="." method="_on_chart_constant_text_submitted"]
[connection signal="focus_exited" from="MetadataOptions/MusicOffset" to="." method="_on_music_offset_focus_exited"]
[connection signal="text_submitted" from="MetadataOptions/MusicOffset" to="." method="_on_music_offset_text_submitted"]
[connection signal="pressed" from="MetadataOptions/OtherMetadata" to="." method="_on_other_metadata_pressed"]
[connection signal="pressed" from="MetadataOptions/UpdateBG" to="." method="_on_update_bg_pressed"]
[connection signal="close_requested" from="MetadataOptions/PickBG" to="." method="_on_pick_bg_close_requested"]
[connection signal="file_selected" from="MetadataOptions/PickBG" to="." method="_on_pick_bg_file_selected"]
[connection signal="close_requested" from="MetadataOptions/Window" to="." method="_on_window_close_requested"]
[connection signal="focus_exited" from="MetadataOptions/Window/VBoxContainer/HBoxContainer/BoxContainer/OtherMetadata" to="." method="_on_other_metadata_focus_exited"]
[connection signal="gui_input" from="PlaybackControls/TimeSlider/ProgressBar" to="." method="_on_progress_bar_gui_input"]
[connection signal="pressed" from="PlaybackControls/PlayPause" to="." method="_on_play_pause_pressed"]
[connection signal="pressed" from="PlaybackControls/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="TimeLineControls/ZoomUp" to="." method="_on_zoom_up_pressed"]
[connection signal="pressed" from="TimeLineControls/ZoomDown" to="." method="_on_zoom_down_pressed"]
[connection signal="pressed" from="TimeLineControls/AddBPMNode" to="." method="_on_add_bpm_node_pressed"]
[connection signal="pressed" from="TimeLineControls/AddDivisorNode" to="." method="_on_add_divisor_node_pressed"]
[connection signal="text_submitted" from="TimeLineControls/BPMWindow/BPMField" to="." method="_on_bpm_field_text_submitted"]
[connection signal="pressed" from="TimeLineControls/BPMWindow/DeleteBPMChange" to="." method="_on_delete_bpm_change_pressed"]
[connection signal="text_submitted" from="TimeLineControls/BeatDivisorWindow/BeatDivisorField" to="." method="_on_beat_divisor_field_text_submitted"]
[connection signal="pressed" from="TimeLineControls/BeatDivisorWindow/DeleteBDChange" to="." method="_on_delete_bd_change_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
